<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Shopping List</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact_email_text">"Please, leave your phone's properties below."</string>
    <string name="continue_as">Continue as %s</string>
    <string name="continue_without_signin">Continue without signing in</string>
    <string name="delete">Delete</string>
    <string name="desc_app_icon">Shopping List Logo</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="error_cant_parse_number">Enter a valid number</string>
    <string name="error_name_too_short">Name should have at least 3 characters.</string>
    <string name="error_no_record">"Can't find record :("</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_shopping_list_description">Description</string>
    <string name="hint_shopping_list_name">Shopping list name</string>
    <string name="listview_main_empty_label">You have no shopping lists. Add one using the button below.</string>
    <string name="listview_shoppinglistview_empty_label">You have no items on the list. Add one using the button below.</string>
    <string name="loading">Loading...</string>
    <string name="menu_clear_checked">Delete checked items</string>
    <string name="menu_sort">Sort...</string>
    <string name="move_to_another_list">Move to another list</string>
    <string name="moved_to">Moved to</string>
    <string name="nav_contact">Contact the author</string>
    <string name="nav_rate">Rate me</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Tell a friend</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no_other_shopping_lists">There are no other shopping lists</string>
    <string name="notify_item_added">Item added</string>
    <string name="notify_item_updated">Item updated</string>
    <string name="notify_shopping_list_added">Shopping list successfully created</string>
    <string name="notify_shopping_list_updated">Shopping list successfully updated</string>
    <string name="percentCompleted">%1$.0f%% completed</string>
    <string name="pref_cat_info">Information</string>
    <string name="pref_cat_sharing">Sharing shopping lists via messsages</string>
    <string name="pref_summary_share_list_desc">Include list description</string>
    <string name="pref_summary_share_list_title">Include list name</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_share_list_desc">Description</string>
    <string name="pref_title_share_list_title">Name</string>
    <string name="radio_quantity_unit_pcs">pcs</string>
    <string name="share">Share</string>
    <string name="share_app_string">"Hi. I'm using Shopping List, free app for having your shopping list everywhere you go. Download it from Play Store: http://play.google.com/store/apps/details?id=%s"</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_in_as">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="signin_with_google">Sign in with Google</string>
    <string name="signing_in">Signing in...</string>
    <string name="synchronize">Synchronize</string>
    <string name="text_default">Default</string>
    <string name="text_less_than_minute_ago">just now</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_your_shopping_lists">Your shopping lists</string>
    <string name="title_activity_item_add">Add item</string>
    <string name="title_activity_item_edit">Edit item</string>
    <string name="title_activity_main">Your shopping lists</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_shopping_list_add">Add Shopping List</string>
    <string name="title_activity_shopping_list_edit">Edit Shopping List</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="contact_email_address">mgr.inz.andrzej.grzyb@gmail.com</string>
    <string name="ok">OK</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_key_language">Language</string>
    <string name="pref_key_share_list_desc">Description</string>
    <string name="pref_key_share_list_title">Name</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="radio_quantity_unit_fl_oz">fl oz</string>
    <string name="radio_quantity_unit_ft">ft</string>
    <string name="radio_quantity_unit_g">g</string>
    <string name="radio_quantity_unit_gal">gal</string>
    <string name="radio_quantity_unit_kg">kg</string>
    <string name="radio_quantity_unit_l">l</string>
    <string name="radio_quantity_unit_lb">lb</string>
    <string name="radio_quantity_unit_m">m</string>
    <string name="radio_quantity_unit_ml">ml</string>
    <string name="radio_quantity_unit_oz">oz</string>
    <string name="server_client_id">918218334499-7g0hrs4mltn143a53mk5qj7c1g90itpe.apps.googleusercontent.com</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="versionName">1.0.1</string>
</resources>
