<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:theme="@style/AppTheme.AppBarOverlay" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:id="@id/toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:titleTextColor="@color/abc_primary_text_material_dark" app:subtitleTextColor="@color/abc_primary_text_material_dark" app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <EditText android:id="@id/shoppingListNameEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_shopping_list_name" android:layout_weight="1.0" />
        <EditText android:id="@id/shoppingListDescriptionEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_shopping_list_description" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/addShoppingListButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_save" android:layout_weight="1.0" android:onClick="onClickAddShoppingList" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
